--- a/website/templates/career/business.html
+++ b/website/templates/career/business.html
@@ -2,4 +2,188 @@
 
 {% block content %}
 
+<br>
+<div class="detail-banner">
+    <div class="detail-banner-content">
+        <div class="detail-info-box">
+            <div class="detail-info-box-content">
+                <div class="career-detail-container">
+                    <h1 class="heading-a">Business Analyst</h1>
+                    <div class="detail-banner-textbox">
+                        <p class="left-align button-a">Usually earn :<br>Seniors can earn :</p>
+                        <p class="right-align button-a">$115K - $140K per year<br>$145K - $160K per year</p>
+                    </div>
+                </div>
+                <p class="detail-route heading-d"><a href="{{ url_for('views.resources', submenu='career-opportunities') }}">Career opportunities</a>  >  Business Analyst</p>
+            </div>
+        </div>
+        <div class="detail-intro heading-d">
+            <p>A Business Analyst analyses processes, and recommends solutions to help organisations achieve their goals by bridging the gap between business requirements and IT solutions.</p>
+        </div>
+    </div>
+    <div class="detail-banner-img no-margin">
+        <img src="/static/img/business-banner.png" alt="Business Analyst">
+    </div>
+</div>
+
+<div class="career-detail-container detail-main-container">
+    <div class="detail-main-content-a">
+        <div class="detail-sidebar">
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Software Developer') }}">
+                <button class="sidebar-content button-a">
+                    <div>Software developer</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='System Administrator') }}">
+                <button class="sidebar-content button-a">
+                    <div>System administrator</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Web Developer') }}">
+                <button class="sidebar-content button-a">
+                    <div>Web developer</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Business Analyst') }}">
+                <button class="sidebar-content-current button-a">
+                    <div>Business analyst</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Security Analyst') }}">
+                <button class="sidebar-content button-a">
+                    <div>Security analyst</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Network Administrator') }}">
+                <button class="sidebar-content button-a">
+                    <div>Network administrator</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+        </div>
+    
+        <div class="career-detail-content">
+            <div class="detail-description-container">
+                <div class="detail-vertical-line"> </div>
+                <div class="detail-textbox-container">
+                    <div class="detail-textbox">
+                        <h4 class="heading-d">What Does a Business Analyst Do?</h2>
+                        <p class="text-c-bold">A Business Analyst acts as a bridge between business needs and IT solutions, helping organisations improve their processes, products, and services. They work closely with stakeholders to understand business requirements and translate them into detailed technical specifications for IT teams. Business Analysts also identify opportunities for improvement, recommend solutions, and ensure that the final deliverables meet the business objectives.</p>
+                    </div>
+                    <div class="detail-textbox">
+                        <h4 class="heading-d">Why Consider a Career as Business Analyst?</h2>
+                        <ul class="text-c-bold">
+                            <li><strong>Impactful Role:</strong> Business Analysts play a key role in shaping business strategy and ensuring successful project outcomes.</li>
+                            <li><strong>Diverse Opportunities:</strong> They work across various industries, offering flexibility and a wide range of career opportunities.</li>
+                            <li><strong>Continuous Learning:</strong> The role involves continuous learning and adaptation to new business challenges and technologies.</li>
+                        </ul>
+                    </div>
+                </div>    
+            </div>
+        </div>
+    </div>
+    
+    <br>
+    
+    <div class="detail-main-content-b">
+        <div class="responsibility-heading">
+            <div class="responsibility-top-border"></div>
+            <h4 class="heading-d">Key Responsibilities</h4>
+        </div>
+        <br>
+        <div class="key-responsibilities">
+            <div class="responsibility-item">
+                <img src="/static/img/icon/requirement.png" alt="Requirements Gathering icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Requirements Gathering</h5>
+                    <p class="text-c-bold">Working with stakeholders to understand and document business needs and objectives.</p>
+                </div>
+            </div>
+            <div class="responsibility-item">
+                <img src="/static/img/icon/analysis.png" alt="Analysis icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Process Analysis</h5>
+                    <p class="text-c-bold">Evaluating existing business processes and identifying areas for improvement or optimisation.</p>
+                </div>
+            </div><div class="responsibility-item">
+                <img src="/static/img/icon/solution.png" alt="solution icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Solution Design</h5>
+                    <p class="text-c-bold">Recommending solutions and working with IT teams to translate business needs into technical specifications.</p>
+                </div>
+            </div><div class="responsibility-item">
+                <img src="/static/img/icon/Stakeholder.png" alt="Stakeholder icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Stakeholder Communication</h5>
+                    <p class="text-c-bold">Acting as a liaison between business stakeholders and technical teams to ensure alignment.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="skills-required">
+            <img src="/static/img/skills-required.png" alt="skills-required">
+            <div class="skills-required-textbox">
+                <h4 class="heading-a">Skills required:</h2>
+                <ul class="button-a">
+                    <li>✔&nbsp;&nbsp;&nbsp;Strong analytical and problem-solving skills.</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Excellent communication and interpersonal abilities.</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Ability to translate business needs into technical requirements.</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Proficiency with data analysis tools and software.</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Understanding of business processes and project management.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="info-center">
+    <a href="{{ url_for('views.resources', submenu='home') }}">
+        <button class="resources-button text-d">Our Resources</button>
+    </a>
+    <br><br>
+    <h2 class="heading-e border-text">Information Centre</h2>
+    <br>
+    <div class="card-container">
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-1.png" alt="Career opportunities">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Career opportunities</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities') }}" class="icon">➜</a>
+        </div>
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-2.png" alt="Self-learn Resources">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Self-learn Resources</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='self-learn-resources') }}" class="icon">➜</a>
+        </div>
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-3.png" alt="Courses at Burnside">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Courses at Burnside</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='courses-at-burnside') }}" class="icon">➜</a>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
