--- a/website/templates/career/network.html
+++ b/website/templates/career/network.html
@@ -2,4 +2,187 @@
 
 {% block content %}
 
+<br>
+<div class="detail-banner">
+    <div class="detail-banner-content">
+        <div class="detail-info-box">
+            <div class="detail-info-box-content">
+                <div class="career-detail-container">
+                    <h1 class="heading-a">Network<br>Administrator</h1>
+                    <div class="detail-banner-textbox">
+                        <p class="left-align button-a">Usually earn :</p>
+                        <p class="right-align button-a">$80K - $140K per year</p>
+                    </div>
+                </div>
+                <p class="detail-route heading-d"><a href="{{ url_for('views.resources', submenu='career-opportunities') }}">Career opportunities</a>  >  Network Administrator</p>
+            </div>
+        </div>
+        <div class="detail-intro heading-d">
+            <p>A Network Administrator manages and maintains an organisation's computer networks, ensuring they run smoothly and securely.</p>
+        </div>
+    </div>
+    <div class="detail-banner-img no-margin">
+        <img src="/static/img/network-banner.png" alt="Network Administrator">
+    </div>
+</div>
+
+<div class="career-detail-container detail-main-container">
+    <div class="detail-main-content-a">
+        <div class="detail-sidebar">
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Software Developer') }}">
+                <button class="sidebar-content button-a">
+                    <div>Software developer</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='System Administrator') }}">
+                <button class="sidebar-content button-a">
+                    <div>System administrator</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Web Developer') }}">
+                <button class="sidebar-content button-a">
+                    <div>Web developer</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Business Analyst') }}">
+                <button class="sidebar-content button-a">
+                    <div>Business analyst</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Security Analyst') }}">
+                <button class="sidebar-content button-a">
+                    <div>Security analyst</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Network Administrator') }}">
+                <button class="sidebar-content-current button-a">
+                    <div>Network administrator</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+        </div>
+    
+        <div class="career-detail-content">
+            <div class="detail-description-container">
+                <div class="detail-vertical-line"> </div>
+                <div class="detail-textbox-container">
+                    <div class="detail-textbox">
+                        <h4 class="heading-d">What Does a Network Administrator Do?</h2>
+                        <p class="text-c-bold">A Network Administrator manages and maintains an organisation’s computer networks, ensuring they operate efficiently and securely. They are responsible for installing, configuring, and supporting network hardware and software, monitoring network performance, and troubleshooting issues. Network Administrators also implement security measures to protect the network from vulnerabilities and ensure reliable connectivity for all users.</p>
+                    </div>
+                    <div class="detail-textbox">
+                        <h4 class="heading-d">Why Consider a Career as Network Administrator?</h2>
+                        <ul class="text-c-bold">
+                            <li><strong>Essential Role:</strong> Network Administrators are vital in ensuring that an organisation’s IT infrastructure runs smoothly and securely.</li>
+                            <li><strong>Variety of Work:</strong> The role offers a mix of hands-on technical work and problem-solving, keeping it dynamic and engaging.</li>
+                            <li><strong>Career Growth:</strong> With the increasing reliance on digital communication, skilled Network Administrators are in steady demand.</li>
+                        </ul>
+                    </div>
+                </div>    
+            </div>
+        </div>
+    </div>
+    
+    <br>
+    
+    <div class="detail-main-content-b">
+        <div class="responsibility-heading">
+            <div class="responsibility-top-border"></div>
+            <h4 class="heading-d">Key Responsibilities</h4>
+        </div>
+        <br>
+        <div class="key-responsibilities">
+            <div class="responsibility-item">
+                <img src="/static/img/icon/monitoring.png" alt="monitoring icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Performance Monitoring</h5>
+                    <p class="text-c-bold">Continuously monitoring network performance and resolving any issues to maintain optimal operation.</p>
+                </div>
+            </div>
+            <div class="responsibility-item">
+                <img src="/static/img/icon/troubleshooting.png" alt="troubleshootings icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Troubleshooting</h5>
+                    <p class="text-c-bold">Diagnosing and fixing network-related problems to minimise downtime and ensure reliable connectivity.</p>
+                </div>
+            </div><div class="responsibility-item">
+                <img src="/static/img/icon/user.png" alt="User Support icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">User Support</h5>
+                    <p class="text-c-bold">Providing technical support to users and ensuring their network access and connectivity needs are met.</p>
+                </div>
+            </div><div class="responsibility-item">
+                <img src="/static/img/icon/security.png" alt="security icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Security Implementation</h5>
+                    <p class="text-c-bold">Protecting the network by implementing security protocols, such as firewalls and access controls.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="skills-required">
+            <img src="/static/img/skills-required.png" alt="skills-required">
+            <div class="skills-required-textbox">
+                <h4 class="heading-a">Skills required:</h2>
+                <ul class="button-a">
+                    <li>✔&nbsp;&nbsp;&nbsp;Proficiency in network technologies, including LAN/WAN, VPNs, and network protocols.</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Strong troubleshooting and problem-solving skills.</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Knowledge of network security principles and tools.</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Experience with network management software and hardware.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="info-center">
+    <a href="{{ url_for('views.resources', submenu='home') }}">
+        <button class="resources-button text-d">Our Resources</button>
+    </a>
+    <br><br>
+    <h2 class="heading-e border-text">Information Centre</h2>
+    <br>
+    <div class="card-container">
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-1.png" alt="Career opportunities">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Career opportunities</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities') }}" class="icon">➜</a>
+        </div>
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-2.png" alt="Self-learn Resources">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Self-learn Resources</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='self-learn-resources') }}" class="icon">➜</a>
+        </div>
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-3.png" alt="Courses at Burnside">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Courses at Burnside</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='courses-at-burnside') }}" class="icon">➜</a>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
