--- a/website/templates/career/security.html
+++ b/website/templates/career/security.html
@@ -2,4 +2,188 @@
 
 {% block content %}
 
+<br>
+<div class="detail-banner">
+    <div class="detail-banner-content">
+        <div class="detail-info-box">
+            <div class="detail-info-box-content">
+                <div class="career-detail-container">
+                    <h1 class="heading-a">Security<br>Analyst</h1>
+                    <div class="detail-banner-textbox">
+                        <p class="left-align button-a">Usually earn :<br>Managers and<br>chief officers earn :</p>
+                        <p class="right-align button-a">$120K - $200K per year<br><br>$150K-$500K per year</p>
+                    </div>
+                </div>
+                <p class="detail-route heading-d"><a href="{{ url_for('views.resources', submenu='career-opportunities') }}">Career opportunities</a>  >  Security Analyst</p>
+            </div>
+        </div>
+        <div class="detail-intro heading-d">
+            <p>A Security Analyst protects an organisation's systems and data by monitoring for threats, analysing vulnerabilities, and implementing security measures.</p>
+        </div>
+    </div>
+    <div class="detail-banner-img no-margin">
+        <img src="/static/img/security-banner.png" alt="Security Analyst">
+    </div>
+</div>
+
+<div class="career-detail-container detail-main-container">
+    <div class="detail-main-content-a">
+        <div class="detail-sidebar">
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Software Developer') }}">
+                <button class="sidebar-content button-a">
+                    <div>Software developer</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='System Administrator') }}">
+                <button class="sidebar-content button-a">
+                    <div>System administrator</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Web Developer') }}">
+                <button class="sidebar-content button-a">
+                    <div>Web developer</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Business Analyst') }}">
+                <button class="sidebar-content button-a">
+                    <div>Business analyst</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Security Analyst') }}">
+                <button class="sidebar-content-current button-a">
+                    <div>Security analyst</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Network Administrator') }}">
+                <button class="sidebar-content button-a">
+                    <div>Network administrator</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+        </div>
+    
+        <div class="career-detail-content">
+            <div class="detail-description-container">
+                <div class="detail-vertical-line"> </div>
+                <div class="detail-textbox-container">
+                    <div class="detail-textbox">
+                        <h4 class="heading-d">What Does a Security Analyst Do?</h2>
+                        <p class="text-c-bold">A Security Analyst protects an organisation’s computer systems and data from cyber threats. They monitor networks for security breaches, investigate incidents, and implement security measures to prevent future attacks. Security Analysts also stay updated on the latest cybersecurity trends and vulnerabilities to ensure that the organisation’s defences remain strong and effective.</p>
+                    </div>
+                    <div class="detail-textbox">
+                        <h4 class="heading-d">Why Consider a Career as Security Analyst?</h2>
+                        <ul class="text-c-bold">
+                            <li><strong>High Demand:</strong> With the rise in cyber threats, Security Analysts are in high demand across all sectors.</li>
+                            <li><strong>Critical Role:</strong> They play a crucial role in protecting sensitive information and ensuring business continuity.</li>
+                            <li><strong>Dynamic Field:</strong> Cybersecurity is a constantly evolving field, offering ongoing challenges and opportunities for growth.</li>
+                        </ul>
+                    </div>
+                </div>    
+            </div>
+        </div>
+    </div>
+    
+    <br>
+    
+    <div class="detail-main-content-b">
+        <div class="responsibility-heading">
+            <div class="responsibility-top-border"></div>
+            <h4 class="heading-d">Key Responsibilities</h4>
+        </div>
+        <br>
+        <div class="key-responsibilities">
+            <div class="responsibility-item">
+                <img src="/static/img/icon/troubleshooting.png" alt="troubleshooting icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Threat Monitoring</h5>
+                    <p class="text-c-bold">Continuously monitoring networks and systems for suspicious activity and potential security breaches.</p>
+                </div>
+            </div>
+            <div class="responsibility-item">
+                <img src="/static/img/icon/incident-response.png" alt="incident-response icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Incident Response</h5>
+                    <p class="text-c-bold">Investigating security incidents, mitigating risks, and responding to threats in a timely manner.</p>
+                </div>
+            </div><div class="responsibility-item">
+                <img src="/static/img/icon/Vulnerability.png" alt="Vulnerability Assessment icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Vulnerability Assessment</h5>
+                    <p class="text-c-bold">Regularly assessing the organisation’s systems to identify and address security weaknesses.</p>
+                </div>
+            </div><div class="responsibility-item">
+                <img src="/static/img/icon/security.png" alt="security icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Security Implementation</h5>
+                    <p class="text-c-bold">Installing and managing security measures such as firewalls, encryption, and intrusion detection systems.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="skills-required">
+            <img src="/static/img/skills-required.png" alt="skills-required">
+            <div class="skills-required-textbox">
+                <h4 class="heading-a">Skills required:</h2>
+                <ul class="button-a">
+                    <li>✔&nbsp;&nbsp;&nbsp;Strong understanding of cybersecurity principles and practices.</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Proficiency with security tools and software, such as firewalls and intrusion detection systems.</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Analytical and problem-solving skills for investigating and responding to security incidents.</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Knowledge of network protocols and system architecture.</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Ability to stay updated on the latest cybersecurity trends and threats.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="info-center">
+    <a href="{{ url_for('views.resources', submenu='home') }}">
+        <button class="resources-button text-d">Our Resources</button>
+    </a>
+    <br><br>
+    <h2 class="heading-e border-text">Information Centre</h2>
+    <br>
+    <div class="card-container">
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-1.png" alt="Career opportunities">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Career opportunities</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities') }}" class="icon">➜</a>
+        </div>
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-2.png" alt="Self-learn Resources">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Self-learn Resources</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='self-learn-resources') }}" class="icon">➜</a>
+        </div>
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-3.png" alt="Courses at Burnside">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Courses at Burnside</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='courses-at-burnside') }}" class="icon">➜</a>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
