--- a/website/templates/career/software.html
+++ b/website/templates/career/software.html
@@ -78,9 +78,9 @@
                     <div class="detail-textbox">
                         <h4 class="heading-d">Why Consider a Career in Software Development?</h2>
                         <ul class="text-c-bold">
-                            <li>High Demand: With the increasing reliance on technology, software developers are in high demand across various industries.</li>
-                            <li>Innovation: As a developer, you have the opportunity to create cutting-edge solutions that can make a real impact.</li>
-                            <li>Flexibility: Many software development jobs offer flexible work environments, including remote work options.</li>
+                            <li><strong>High Demand:</strong> With the increasing reliance on technology, software developers are in high demand across various industries.</li>
+                            <li><strong>Innovation:</strong> As a developer, you have the opportunity to create cutting-edge solutions that can make a real impact.</li>
+                            <li><strong>Flexibility:</strong> Many software development jobs offer flexible work environments, including remote work options.</li>
                         </ul>
                     </div>
                 </div>    
@@ -88,6 +88,7 @@
         </div>
     </div>
     
+    <br>
     
     <div class="detail-main-content-b">
         <div class="responsibility-heading">
@@ -150,7 +151,7 @@
     <div class="card-container">
         <div class="card">
             <div class="card-image-container">
-                <img class="card-image blur" src="../static/img/info-center-1.png" alt="Career opportunities">
+                <img class="card-image blur" src="../../static/img/info-center-1.png" alt="Career opportunities">
             </div>
             <div class="card-content">
                 <div class="card-category text-c">RESOURCES &gt;</div>
@@ -161,7 +162,7 @@
         </div>
         <div class="card">
             <div class="card-image-container">
-                <img class="card-image blur" src="../static/img/info-center-2.png" alt="Self-learn Resources">
+                <img class="card-image blur" src="../../static/img/info-center-2.png" alt="Self-learn Resources">
             </div>
             <div class="card-content">
                 <div class="card-category text-c">RESOURCES &gt;</div>
@@ -172,7 +173,7 @@
         </div>
         <div class="card">
             <div class="card-image-container">
-                <img class="card-image blur" src="../static/img/info-center-3.png" alt="Courses at Burnside">
+                <img class="card-image blur" src="../../static/img/info-center-3.png" alt="Courses at Burnside">
             </div>
             <div class="card-content">
                 <div class="card-category text-c">RESOURCES &gt;</div>
