--- a/website/templates/career/system.html
+++ b/website/templates/career/system.html
@@ -2,4 +2,187 @@
 
 {% block content %}
 
+<br>
+<div class="detail-banner">
+    <div class="detail-banner-content">
+        <div class="detail-info-box">
+            <div class="detail-info-box-content">
+                <div class="career-detail-container">
+                    <h1 class="heading-a">System<br>Administrator</h1>
+                    <div class="detail-banner-textbox">
+                        <p class="left-align button-a">Usually earn :<br>Database admin earn :</p>
+                        <p class="right-align button-a">$85K - $120K per year<br>$85K-$145K per year</p>
+                    </div>
+                </div>
+                <p class="detail-route heading-d"><a href="{{ url_for('views.resources', submenu='career-opportunities') }}">Career opportunities</a>  >  System Administrator</p>
+            </div>
+        </div>
+        <div class="detail-intro heading-d">
+            <p>A System Administrator manages and maintains an organisation's computer systems, ensuring they run smoothly, securely, and efficiently.</p>
+        </div>
+    </div>
+    <div class="detail-banner-img no-margin">
+        <img src="/static/img/system-banner.png" alt="System Administrator">
+    </div>
+</div>
+
+<div class="career-detail-container detail-main-container">
+    <div class="detail-main-content-a">
+        <div class="detail-sidebar">
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Software Developer') }}">
+                <button class="sidebar-content button-a">
+                    <div>Software developer</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='System Administrator') }}">
+                <button class="sidebar-content button-a">
+                    <div>System administrator</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Web Developer') }}">
+                <button class="sidebar-content button-a">
+                    <div>Web developer</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Business Analyst') }}">
+                <button class="sidebar-content-current button-a">
+                    <div>Business analyst</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Security Analyst') }}">
+                <button class="sidebar-content button-a">
+                    <div>Security analyst</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities', career='Network Administrator') }}">
+                <button class="sidebar-content button-a">
+                    <div>Network administrator</div>
+                    <div class="button-c">></div>
+                </button>
+            </a>
+        </div>
+    
+        <div class="career-detail-content">
+            <div class="detail-description-container">
+                <div class="detail-vertical-line"> </div>
+                <div class="detail-textbox-container">
+                    <div class="detail-textbox">
+                        <h4 class="heading-d">What Does a System Administrator Do?</h2>
+                        <p class="text-c-bold">A System Administrator (SysAdmin) is responsible for managing and maintaining an organisation’s IT infrastructure, ensuring that computer systems run efficiently and securely. They handle a wide range of tasks, including installing and configuring hardware and software, monitoring system performance, and troubleshooting issues to minimise downtime. System Administrators also implement and enforce security protocols to protect against cyber threats and ensure that data is backed up and recoverable. Their work is crucial in keeping an organisation's technology systems up and running, which allows business operations to proceed smoothly.</p>
+                    </div>
+                    <div class="detail-textbox">
+                        <h4 class="heading-d">Why Consider a Career as System Administrator?</h2>
+                        <ul class="text-c-bold">
+                            <li><strong>Essential Role:</strong> System Administrators play a critical role in ensuring the smooth operation of an organisation’s IT systems.</li>
+                            <li><strong>Variety of Work:</strong> The job offers a variety of tasks and challenges, making it dynamic and engaging.</li>
+                            <li><strong>Career Growth:</strong> With the increasing reliance on technology, there are many opportunities for career advancement in system administration.</li>
+                        </ul>
+                    </div>
+                </div>    
+            </div>
+        </div>
+    </div>
+    
+    <br>
+    
+    <div class="detail-main-content-b">
+        <div class="responsibility-heading">
+            <div class="responsibility-top-border"></div>
+            <h4 class="heading-d">Key Responsibilities</h4>
+        </div>
+        <br>
+        <div class="key-responsibilities">
+            <div class="responsibility-item">
+                <img src="/static/img/icon/system-maintenance.png" alt="maintenance icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">System Maintenance</h5>
+                    <p class="text-c-bold">Installing, configuring, and maintaining servers, networks, and other IT infrastructure.</p>
+                </div>
+            </div>
+            <div class="responsibility-item">
+                <img src="/static/img/icon/monitoring.png" alt="Monitoring icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Performance Monitoring</h5>
+                    <p class="text-c-bold">Continuously monitoring system performance and making adjustments to ensure optimal operation.</p>
+                </div>
+            </div><div class="responsibility-item">
+                <img src="/static/img/icon/troubleshooting.png" alt="Troubleshooting icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Troubleshooting</h5>
+                    <p class="text-c-bold">Identifying and resolving hardware, software, and network issues to minimise disruptions.</p>
+                </div>
+            </div><div class="responsibility-item">
+                <img src="/static/img/icon/security.png" alt="security icon">
+                <div class="responsibility-textbox">
+                    <h5 class="heading-a">Security Management</h5>
+                    <p class="text-c-bold">Implementing security measures, including firewalls, access controls, and data backups, to protect against cyber threats.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="skills-required">
+            <img src="/static/img/skills-required.png" alt="skills-required">
+            <div class="skills-required-textbox">
+                <h4 class="heading-a">Skills required:</h2>
+                <ul class="button-a">
+                    <li>✔&nbsp;&nbsp;&nbsp;In-depth knowledge of operating systems like Windows, Linux, or UNIX</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Strong problem-solving skills and the ability to troubleshoot complex technical issues</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Familiarity with networking concepts, including LAN/WAN and VPN</li>
+                    <li>✔&nbsp;&nbsp;&nbsp;Understanding of cybersecurity principles and data protection</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="info-center">
+    <a href="{{ url_for('views.resources', submenu='home') }}">
+        <button class="resources-button text-d">Our Resources</button>
+    </a>
+    <br><br>
+    <h2 class="heading-e border-text">Information Centre</h2>
+    <br>
+    <div class="card-container">
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-1.png" alt="Career opportunities">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Career opportunities</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='career-opportunities') }}" class="icon">➜</a>
+        </div>
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-2.png" alt="Self-learn Resources">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Self-learn Resources</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='self-learn-resources') }}" class="icon">➜</a>
+        </div>
+        <div class="card">
+            <div class="card-image-container">
+                <img class="card-image blur" src="../../static/img/info-center-3.png" alt="Courses at Burnside">
+            </div>
+            <div class="card-content">
+                <div class="card-category text-c">RESOURCES &gt;</div>
+                <h3 class="heading-f">Courses at Burnside</h3>
+            </div>
+            <br>
+            <a href="{{ url_for('views.resources', submenu='courses-at-burnside') }}" class="icon">➜</a>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
