--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -43,8 +43,8 @@
     <div id="home-questions-item">
         <h2 class="heading-a">Have any questions?</h2>
         <p class="heading-a">Come visit our community page and share your questions & knowledge!</p>
-        <a href="{{ url_for('views.forum', id='home') }}">
-            <button class="button-angular button-a">GO TO COMMUNITY</button>
+        <a class="home-questions-link" href="{{ url_for('views.forum', id='home') }}">
+            <button class="button-angular button-a home-questions-btn">GO TO COMMUNITY</button>
         </a>
     </div>
 </div>
